# infra-chatbot

./: .gitignore  MODULE.bazel  Makefile  README.md
.github/workflows/: agent.yml  api.yml  core.yml
app/: bun.lockb  package.json
app/src/: env.ts
app/src/actions/: auth.action.ts  chat.ts
app/src/app/: globals.css  layout.tsx  providers.tsx
app/src/app/(auth)/: layout.tsx
app/src/app/(default)/: layout.tsx  page.tsx
app/src/app/answer/: page.tsx
app/src/app/chats/: page.tsx
app/src/components/chat/: ChatHeader.tsx  ChatInput.tsx  ChatList.tsx  message.tsx  (+2 more)
app/src/lib/: api.ts
app/src/schemas/: auth.schema.ts
app/src/store/: chat.ts
app/src/types/: next-auth.d.ts
chatbot/: docker-compose.yml
chatbot/agent/: .env.example  BUILD.bazel  Dockerfile  README.md  app.py  format.sh  requirements.txt
chatbot/agent/config/: settings.py
chatbot/agent/src/: __init__.py  serve_app.py
chatbot/agent/src/app/: app.py  inference.py
chatbot/agent/src/config/: settings.py
chatbot/agent/src/tests/: test_app.py
chatbot/agent/src/utils/: utilities.py
chatbot/agent/tests/: test_app.py
chatbot/agent/tests/unit_tests/: test_app.py
chatbot/api/: Dockerfile
chatbot/api/app/: main.py
chatbot/core/: .env.example  Dockerfile  pyproject.toml  requirements.txt
chatbot/core/src/: nginx.conf  start_ollama.sh
chatbot/handler/: .dockerignore  .env.example  Dockerfile  requirements.txt
chatbot/handler/src/: lambda_handler.py  main.py
deploy/state/: main.tf  variables.tf
scripts/: compute_tag.sh  drop_ecr.sh  drop_s3.sh  setup_ecr.sh  setup_s3.sh
(+160 files in other folders)
