module(
    name = "infra-chatbot",
    version = "1.0.0",
)

# Define your module's dependencies here
bazel_dep(name = "rules_python", version = "1.3.0")
bazel_dep(name = "rules_go", version = "0.53.0")
bazel_dep(name = "gazelle", version = "0.42.0")
bazel_dep(name = "rules_tf", version = "0.0.9")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
  hub_name = "pypi",
  python_version = "3.13.2",
  requirements_lock = "//chatbot/agent:requirements.txt",
)
use_repo(pip, "pypi")
