load("@rules_python//python:py_binary.bzl", "py_binary")

# Library target that includes the main application code and configuration.

py_library(
    name = "agent_lib",
    srcs = glob(["*.py", "config/*.py"]),
    # Add any Python dependencies from your local code or from pip
    deps = [
        "@pypi//fastapi",
        "@pypi//uvicorn",
        "@pypi//pydantic",
    ],
    visibility = ["//visibility:public"],
)


# Binary target to run the FastAPI app.
py_binary(
    name = "agent_app",
    srcs = ["app.py"],
    main = "app.py",
    deps = [":agent_lib"],
)

# Test target for running unit tests.
py_test(
    name = "agent_tests",
    srcs = glob(["tests/*.py"]),
    main = "tests/test_app.py",
    deps = [":agent_lib"],
)
